fix(ui): Correct tooltip/hovercard z-index

--- a/packages/ui/src/css/default.css
+++ b/packages/ui/src/css/default.css
@@ -63,8 +63,3 @@ a:focus {
   color: var(--color-primary-dark);
   outline: none;
 }
-
-.__reakit-portal {
-  z-index: var(--layer-xhigh);
-  position: relative;
-}
