--- a/packages/ui/src/ui/hover-card/hover-card.module.css
+++ b/packages/ui/src/ui/hover-card/hover-card.module.css
@@ -17,6 +17,7 @@
 }
 
 .hoverCard {
+  z-index: var(--layer-xxhigh);
   padding: var(--space-xsmall) var(--space-small);
   border-radius: var(--radius-medium);
   width: calc(100vw - 2 * var(--space-small));
